// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> Compact story renders snapshot 1`] = `
<div
  class="dropdown dropdown--compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    data-headlessui-state="open"
    id="headlessui-listbox-label-13"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-15"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-13 headlessui-listbox-button-14"
    class="dropdown-button dropdown-button--compact"
    data-headlessui-state="open"
    id="headlessui-listbox-button-14"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-13"
    aria-orientation="vertical"
    class="dropdown__options"
    data-headlessui-state="open"
    id="headlessui-listbox-options-15"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-16"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-17"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-18"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> CompactUsingChildrenPropAndNoVisibleLabel story renders snapshot 1`] = `
<div
  class="dropdown dropdown--compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    data-headlessui-state="open"
    id="headlessui-listbox-label-43"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-45"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-43 headlessui-listbox-button-44"
    class="dropdown-button dropdown-button--compact"
    data-headlessui-state="open"
    id="headlessui-listbox-button-44"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-43"
    aria-orientation="vertical"
    class="dropdown__options"
    data-headlessui-state="open"
    id="headlessui-listbox-options-45"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-46"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-47"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-48"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> CompactWithOptionsRightAligned story renders snapshot 1`] = `
<div
  class="dropdown dropdown--compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    data-headlessui-state="open"
    id="headlessui-listbox-label-19"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-21"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-19 headlessui-listbox-button-20"
    class="dropdown-button dropdown-button--compact"
    data-headlessui-state="open"
    id="headlessui-listbox-button-20"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-19"
    aria-orientation="vertical"
    class="dropdown__options dropdown__options--align-right"
    data-headlessui-state="open"
    id="headlessui-listbox-options-21"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-22"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-23"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-24"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> Default story renders snapshot 1`] = `
<div
  class="dropdown dropdown--non-compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label"
    data-headlessui-state="open"
    id="headlessui-listbox-label-1"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-3"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-1 headlessui-listbox-button-2"
    class="dropdown-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-2"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-1"
    aria-orientation="vertical"
    class="dropdown__options dropdown__options--full-width"
    data-headlessui-state="open"
    id="headlessui-listbox-options-3"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-4"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-5"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-6"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> DefaultWithoutVisibleLabel story renders snapshot 1`] = `
<div
  class="dropdown dropdown--non-compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    data-headlessui-state="open"
    id="headlessui-listbox-label-7"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-9"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-7 headlessui-listbox-button-8"
    class="dropdown-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-8"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-7"
    aria-orientation="vertical"
    class="dropdown__options dropdown__options--full-width"
    data-headlessui-state="open"
    id="headlessui-listbox-options-9"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-10"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-11"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-12"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> SeparateButtonAndMenuWidth story renders snapshot 1`] = `
<div
  class="dropdown dropdown--non-compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    data-headlessui-state="open"
    id="headlessui-listbox-label-25"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-27"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-25 headlessui-listbox-button-26"
    class="dropdown-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-26"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-25"
    aria-orientation="vertical"
    class="dropdown__options separate-button-and-menu-width"
    data-headlessui-state="open"
    id="headlessui-listbox-options-27"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-28"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-29"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-30"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> UsingChildrenProp story renders snapshot 1`] = `
<div
  class="dropdown dropdown--non-compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label"
    data-headlessui-state="open"
    id="headlessui-listbox-label-31"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-33"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-31 headlessui-listbox-button-32"
    class="dropdown-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-32"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-31"
    aria-orientation="vertical"
    class="dropdown__options dropdown__options--full-width"
    data-headlessui-state="open"
    id="headlessui-listbox-options-33"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-34"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-35"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-36"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> UsingChildrenPropAndNoVisibleLabel story renders snapshot 1`] = `
<div
  class="dropdown dropdown--non-compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label u-is-vishidden"
    data-headlessui-state="open"
    id="headlessui-listbox-label-37"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-39"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-37 headlessui-listbox-button-38"
    class="dropdown-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-38"
    type="button"
  >
    <span>
      Select
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-label-37"
    aria-orientation="vertical"
    class="dropdown__options dropdown__options--full-width"
    data-headlessui-state="open"
    id="headlessui-listbox-options-39"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-40"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-41"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-42"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> UsingFunctionChildrenProp story renders snapshot 1`] = `
<div
  aria-label="Favorite Animal"
  class="dropdown dropdown--non-compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <button
    aria-controls="headlessui-listbox-options-50"
    aria-expanded="true"
    aria-haspopup="listbox"
    class="function-children__button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-49"
    type="button"
  >
    Select
    <svg
      aria-hidden="true"
      class="icon function-children__icon"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 18V16H14V18H10ZM3 8V6H21V8H3ZM6 13V11H18V13H6Z"
      />
    </svg>
  </button>
  <ul
    aria-labelledby="headlessui-listbox-button-49"
    aria-orientation="vertical"
    class="dropdown__options dropdown__options--full-width"
    data-headlessui-state="open"
    id="headlessui-listbox-options-50"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-51"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-52"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-53"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Dropdown /> renders the OpenByDefault story 1`] = `
<div
  class="dropdown dropdown--non-compact"
  data-headlessui-state="open"
  data-testid="dropdown"
>
  <label
    class="label"
    data-headlessui-state="open"
    id="headlessui-listbox-label-54"
  >
    Favorite Animal
  </label>
  <button
    aria-controls="headlessui-listbox-options-56"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="headlessui-listbox-label-54 headlessui-listbox-button-55"
    class="dropdown-button"
    data-headlessui-state="open"
    id="headlessui-listbox-button-55"
    type="button"
  >
    <span>
      Cats
    </span>
    <svg
      aria-hidden="true"
      class="icon dropdown-button__icon dropdown-button__icon--reversed"
      fill="currentColor"
      height="1.25rem"
      style="--icon-size: 1.25rem;"
      viewBox="0 0 24 24"
      width="1.25rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 15.3746L6 9.37461L7.4 7.97461L12 12.5746L16.6 7.97461L18 9.37461L12 15.3746Z"
      />
    </svg>
  </button>
  <ul
    aria-activedescendant="headlessui-listbox-option-61"
    aria-labelledby="headlessui-listbox-label-54"
    aria-orientation="vertical"
    class="dropdown__options dropdown__options--full-width"
    data-headlessui-state="open"
    id="headlessui-listbox-options-56"
    role="listbox"
    tabindex="0"
  >
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-60"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Dogs
      </span>
    </li>
    <li
      aria-selected="true"
      class="dropdown__option dropdown__option--active dropdown__option--selected"
      data-headlessui-state="active selected"
      id="headlessui-listbox-option-61"
      role="option"
      tabindex="-1"
    >
      <span
        class="selected-icon__container"
      >
        <svg
          aria-hidden="true"
          class="icon"
          fill="currentColor"
          height="1.25rem"
          style="--icon-size: 1.25rem;"
          viewBox="0 0 24 24"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9.55001 17.9996L3.85001 12.2996L5.27501 10.8746L9.55001 15.1496L18.725 5.97461L20.15 7.39961L9.55001 17.9996Z"
          />
        </svg>
      </span>
      <span
        class="option__content"
      >
        Cats
      </span>
    </li>
    <li
      aria-selected="false"
      class="dropdown__option"
      data-headlessui-state=""
      id="headlessui-listbox-option-62"
      role="option"
      tabindex="-1"
    >
      <span
        class="option__content"
      >
        Birds
      </span>
    </li>
  </ul>
</div>
`;
